--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
@@ -28,7 +28,7 @@
         </ion-fab>
 
         <ion-item>
-          <ion-input type="inputText" name="name" formControlName="name" [(ngModel)]="inputSetQr.name" placeholder="Nombre..">
+          <ion-input type="inputText" name="name" formControlName="name" placeholder="Nombre..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
@@ -41,7 +41,7 @@
         </ng-container>
 
         <ion-item>
-          <ion-input type="inputText" name="surname" formControlName="surname" [(ngModel)]="inputSetQr.surname" placeholder="Apellido..">
+          <ion-input type="inputText" name="surname" formControlName="surname" placeholder="Apellido..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
@@ -54,7 +54,7 @@
         </ng-container>
 
         <ion-item>
-          <ion-input type="number" name="dni" formControlName="dni" [(ngModel)]="inputSetQr.dni"  placeholder="DNI..">
+          <ion-input type="number" name="dni" formControlName="dni" placeholder="DNI..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
