--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -1,14 +1,18 @@
-<<<<<<< HEAD
+
 <ion-content *ngIf="this.user">
+
+  <div class="loadingContainer" id="loadingContainer" hidden>
+    <!-- <app-spinner></app-spinner> -->
+    <div class="loading">
+      <img src="../../../assets/images/icono.png">
+    </div>
+  </div>
 
   <ion-fab vertical="bottom" horizontal="start" slot="fixed" (click)="redirectTo('user/profile')">
     <ion-fab-button>
       <img src="{{ user.img }}" alt="">
     </ion-fab-button>
   </ion-fab>
-=======
-<ion-content>
->>>>>>> main
 
   <div class="container-cards">
     <div style="all:unset;" *ngFor="let link of this.links">
