--- a/TP_Comanda/src/app/pages/home/home.page.scss
+++ b/TP_Comanda/src/app/pages/home/home.page.scss
@@ -1,5 +1,6 @@
 .container-cards {
   margin-top: 10%;
+  margin-bottom: 20%;
 
   ion-card {
     display: -webkit-inline-box;
@@ -27,7 +28,12 @@
   }
 }
 
-.loading{
+app-scanner {
+  position: fixed;
+  top: 100%;
+}
+
+.loading {
   width: 100px;
   height: 100px;
   position: fixed;
@@ -41,7 +47,7 @@
   border-radius: 100px;
 }
 
-.loadingContainer{
+.loadingContainer {
   width: 100%;
   height: 1000vh;
   position: absolute;
@@ -49,22 +55,62 @@
   z-index: 299;
 }
 
-@keyframes round{
-  from { transform: none; }
-  50% { transform: scale(1.4); }
-  to { transform: none; }
+@keyframes round {
+  from {
+    transform: none;
+  }
+
+  50% {
+    transform: scale(1.4);
+  }
+
+  to {
+    transform: none;
+  }
 }
 
-@keyframes vibrar{
-  0%{transform: translateY(2px);}
-  10%{transform: translateY(-4px);}
-  20%{transform: translateY(4px);}
-  30%{transform: translateY(-4px);}
-  40%{transform: translateY(4px);}
-  50%{transform: translateY(-4px);}
-  60%{transform: translateY(4px);}
-  70%{transform: translateY(-4px);}
-  80%{transform: translateY(4px);}
-  90%{transform: translateY(-4px);}
-  100%{transform: translateY(4px);}
+@keyframes vibrar {
+  0% {
+    transform: translateY(2px);
+  }
+
+  10% {
+    transform: translateY(-4px);
+  }
+
+  20% {
+    transform: translateY(4px);
+  }
+
+  30% {
+    transform: translateY(-4px);
+  }
+
+  40% {
+    transform: translateY(4px);
+  }
+
+  50% {
+    transform: translateY(-4px);
+  }
+
+  60% {
+    transform: translateY(4px);
+  }
+
+  70% {
+    transform: translateY(-4px);
+  }
+
+  80% {
+    transform: translateY(4px);
+  }
+
+  90% {
+    transform: translateY(-4px);
+  }
+
+  100% {
+    transform: translateY(4px);
+  }
 }
