--- a/TP_Comanda/src/global.scss
+++ b/TP_Comanda/src/global.scss
@@ -88,6 +88,11 @@ ion-footer {
   }
 }
 
+.container-cards {
+  margin-top: 10%;
+  margin-bottom: 20%;
+}
+
 @keyframes rotate {
   from {
     transform: rotateZ(0deg);
