--- a/TP_Comanda/src/app/pages/wait/list/list.page.html
+++ b/TP_Comanda/src/app/pages/wait/list/list.page.html
@@ -1,21 +1,41 @@
 <ion-content>
 
-  <div class="container-cards">
+  <div *ngIf="!this.waitSelected" id="container-users" class="container-cards">
     <div style="all:unset;" *ngFor="let w of this.waits$ | async">
       <ion-card class="card-shadow">
-        <div class="buttons">
-          <ion-button (click)="setStatus(w, 'EN USO')" *ngIf="w.estado == 'PENDIENTE'">
-            Reservar
-          </ion-button>
-          <ion-button (click)="setStatus(w, 'CANCELADO')" *ngIf="w.estado == 'PENDIENTE'">
-            Cancelar
-          </ion-button>
-        </div>
 
         <div class="details">
           <p>{{ w.correo }}</p>
           <p>{{ w.estado }}</p>
           <p>{{ w.date_created | date:'short' }}</p>
+        </div>
+
+        <div class="buttons">
+          <ion-button (click)="clickWait(w)" *ngIf="w.estado == 'PENDIENTE'">
+            Reservar
+          </ion-button>
+          <ion-button id="btn-cancel" (click)="clickCancel(w)" *ngIf="w.estado == 'PENDIENTE'">
+            Cancelar
+          </ion-button>
+        </div>
+
+      </ion-card>
+    </div>
+  </div>
+
+  <div *ngIf="this.waitSelected" id="container-tables" class="container-cards">
+    <div style="all:unset;" *ngFor="let w of this.tables$ | async">
+      <ion-card class="card-shadow">
+        <div class="buttons">
+          <ion-button (click)="clickConfirm(w)">
+            Reservar
+          </ion-button>
+        </div>
+
+        <div class="details">
+          <p>Número: {{ w.numero }}</p>
+          <p>Máximo: ({{ w.cantidad }})</p>
+          <p>Tipo: {{ w.tipo }}</p>
         </div>
       </ion-card>
     </div>
@@ -27,7 +47,13 @@
     </ion-fab-button>
   </ion-fab>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab (click)="clickBack()" *ngIf="this.waitSelected" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="back"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-fab *ngIf="!this.waitSelected" vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>{{ this.kyndSelected.val }}</ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button *ngFor="let p of this.kynds" (click)="setFilter(p)">
