acciones del mozo

--- a/TP_Comanda/src/app/pages/mesa/list/list.page.html
+++ b/TP_Comanda/src/app/pages/mesa/list/list.page.html
@@ -24,7 +24,7 @@
     <ion-fab-button>{{ this.kyndSelected.val }}</ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button *ngFor="let p of this.kynds" (click)="setFilter(p)">
-        <ion-icon name="logo-facebook"></ion-icon>
+        <p>p.val</p>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
