--- a/TP_Comanda/src/app/pages/producto/alta/alta.page.html
+++ b/TP_Comanda/src/app/pages/producto/alta/alta.page.html
@@ -62,6 +62,19 @@
         </ion-row>
       </ion-item>
 
+      <ion-item>
+        <ion-label>
+          <ion-icon name="logo-reddit"></ion-icon>
+        </ion-label>
+
+        <ion-select placeholder="Tipo.." name="tipo" formControlName="tipo" okText="Confirmar"
+          cancelText="Cancelar">
+          <ion-select-option>COMIDA</ion-select-option>
+          <ion-select-option>BEBIDA</ion-select-option>
+          <ion-select-option>POSTRE</ion-select-option>
+        </ion-select>
+      </ion-item>
+
 
 
       <!-- imagen -->
