--- a/TP_Comanda/src/app/pages/producto/list/list.page.html
+++ b/TP_Comanda/src/app/pages/producto/list/list.page.html
@@ -43,7 +43,7 @@
     <ion-fab-button>{{ this.kyndSelected.val }}</ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button *ngFor="let p of this.kynds" (click)="setFilter(p)">
-        <p>p.val</p>
+        <p>{{p.val}}</p>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
