--- a/TP_Comanda/src/app/pages/user/list/list.page.html
+++ b/TP_Comanda/src/app/pages/user/list/list.page.html
@@ -29,7 +29,7 @@
     <ion-fab-button>{{ this.profileSelected.val }}</ion-fab-button>
     <ion-fab-list side="top">
       <ion-fab-button *ngFor="let p of this.profiles" (click)="setFilter(p)">
-        <p>p.val</p>
+        <p>{{p.val}}</p>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
