avanzando en pedidos

--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -19,7 +19,9 @@
         (click)="redirectTo(link.url)">
 
         <img src="{{ link.img }}" />
-
+        <div class="text-img">
+          <p>{{ link.title }}</p>
+        </div>
       </ion-card>
     </div>
   </div>
