--- a/TP_Comanda/src/app/pages/pedido/list/list.page.html
+++ b/TP_Comanda/src/app/pages/pedido/list/list.page.html
@@ -15,7 +15,7 @@
               <thead>
                 <tr>
                   <th>
-                    <ion-button *ngIf="req.estado == 'COBRADO'" (click)="setStatus(req, 'CANCELADO')" id="btn-decline">👎</ion-button>
+                    <ion-button (click)="setStatus(req, 'CANCELADO')" id="btn-decline">👎</ion-button>
                   </th>
                   <th></th>
                   <th></th>
