--- a/TP_Comanda/src/theme/variables.scss
+++ b/TP_Comanda/src/theme/variables.scss
@@ -5,7 +5,7 @@
 :root {
   /** primary **/
   --ion-color-primary: #1e8593;
-  --ion-color-primary-contrast: red;
+  --ion-color-primary-contrast: rgb(38, 0, 255);
   --ion-color-primary-shade: black;
   --ion-color-primary-tint: yellow;
 }
