--- a/TP_Comanda/src/app/pages/home/home.page.scss
+++ b/TP_Comanda/src/app/pages/home/home.page.scss
@@ -1,19 +1,9 @@
 .container-cards {
   ion-card {
     display: -webkit-inline-box;
-    // width: 40%;
-    // height: 20%;
     width: 95%;
     height: 40%;
     margin: 2%;
-
-    p {
-      left: 0%;
-      right: 0%;
-      top: 73%;
-      position: fixed;
-      font-size: 72.57%;
-    }
 
     img {
       padding: 2.4%;
@@ -50,6 +40,15 @@ app-scanner {
   position: absolute;
   background-color: rgba(62, 199, 44, 0.385);
   z-index: 299;
+}
+
+.text-img{
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  background-color: #ffffff85;
+  padding: 0.5%;
+  border-radius: 3% 30%;
 }
 
 @keyframes round {
