--- a/TP_Comanda/src/app/pages/encuesta/cliente/cliente.page.html
+++ b/TP_Comanda/src/app/pages/encuesta/cliente/cliente.page.html
@@ -119,13 +119,13 @@
         <ion-col col-12>
           <hr />  
           <!-- <ion-button  color="dark" expand="block" [hidden]="yaSubioTodasLasFotos">Escanear Qr</ion-button> -->
-          <ion-button  color="dark" expand="block" [hidden]="yaSubioTodasLasFotos">Escanear Qr</ion-button>
+          <ion-button  color="dark" expand="block">Escanear Qr</ion-button>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col col-12>
+        <!-- <ion-col col-12>
           <img [src]="foto" alt="" /> 
-        </ion-col>
+        </ion-col> -->
       </ion-row>
       <ion-row>
         <ion-col col-12>
