--- a/TP_Comanda/src/app/pages/pedido/list/list.page.html
+++ b/TP_Comanda/src/app/pages/pedido/list/list.page.html
@@ -33,7 +33,7 @@
 
               <tbody>
                 <tr *ngFor="let product of req.producto_id">
-                  <td (click)="clickDetails(product)"> 👁‍🗨 </td>
+                  <td> 👁‍🗨 </td> <!-- (click)="clickDetails(product)" -->
                   <td>
                     <p>{{ product.name }}</p>
                   </td>
