--- a/TP_Comanda/src/app/pages/producto/list/list.page.html
+++ b/TP_Comanda/src/app/pages/producto/list/list.page.html
@@ -14,7 +14,7 @@
 
         <tbody>
           <tr *ngFor="let product of this.list$ | async">
-            <td (click)="clickDetails(product)"> 👁‍🗨 </td>
+            <td > 👁‍🗨 </td> <!-- (click)="clickDetails(product)" -->
             <td><p>{{ product.nombreProducto }}</p></td>
             <td><p>{{product.precio | currency }}</p></td>
 
