titulos en cada page, arreglo de estilos en general

--- a/TP_Comanda/src/app/pages/mesa/alta/alta.page.html
+++ b/TP_Comanda/src/app/pages/mesa/alta/alta.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Alta Mesa</ion-title>
+    <ion-title size="small">Alta Mesa</ion-title>
   </ion-toolbar>
 </ion-header>
 
