--- a/TP_Comanda/src/app/pages/mesa/list/list.page.html
+++ b/TP_Comanda/src/app/pages/mesa/list/list.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title size="small">Listado de Mesas</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
   <div class="container-cards">
