--- a/TP_Comanda/src/app/pages/producto/alta/alta.page.html
+++ b/TP_Comanda/src/app/pages/producto/alta/alta.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Alta Producto</ion-title>
+    <ion-title size="small">Alta Producto</ion-title>
   </ion-toolbar>
 </ion-header>
 
