--- a/TP_Comanda/src/app/pages/user/register/cliente/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/cliente/register.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title *ngIf="this.user" size="small">Registrar Cliente</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
   <ion-fab  vertical="top" horizontal="end">
@@ -106,11 +112,17 @@
     <ion-fab-button id="anonymus"> ❓ </ion-fab-button>
   </ion-fab>
 
+  <ion-fab *ngIf="this.user" (click)="redirectTo('home')" vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="home"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
 
 
 
-<ion-footer>
+<ion-footer *ngIf="!this.user">
   <p>¿Tienes una cuenta?</p>
   <ion-button (click)="redirectTo('user/login')" size="small" shape="round" type="submit" fill="solid" class="sign-btn">
     Inicia Sesíon</ion-button>
