--- a/TP_Comanda/src/app/pages/wait/list/list.page.html
+++ b/TP_Comanda/src/app/pages/wait/list/list.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Listado Clientes en Espera</ion-title>
+    <ion-title size="small">Listado Clientes en Espera</ion-title>
     <p *ngIf="this.waitSelected"> ( Seleccione Mesa )</p>
   </ion-toolbar>
 </ion-header>
