--- a/TP_Comanda/src/app/pages/pedido/list/list.page.html
+++ b/TP_Comanda/src/app/pages/pedido/list/list.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title size="small">Listado de Pedidos {{ this.kyndSelected.val }}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
   <div class="container-cards">
@@ -15,15 +21,12 @@
               <thead>
                 <tr>
                   <th>
-                    <ion-button (click)="setStatus(req, 'CANCELADO')" id="btn-decline">👎</ion-button>
+                    <ion-button *ngIf="req.estado == 'PENDIENTE'" (click)="setStatus(req, 'CANCELADO')" id="btn-decline">👎</ion-button>
                   </th>
-                  <th></th>
+                  <th><p>{{ this.getQuestion(req.estado) }}</p></th>
                   <th></th>
                   <th *ngIf="req.estado == 'PENDIENTE'">
                     <ion-button (click)="setStatus(req, 'ACEPTADO')" id="btn-confirm">👍</ion-button>
-                  </th>
-                  <th *ngIf="req.estado == 'ACEPTADO'">
-                    <ion-button (click)="setStatus(req, 'CONFIRMADO')" id="btn-confirm">👍</ion-button>
                   </th>
                   <th *ngIf="req.estado == 'COBRAR'">
                     <ion-button (click)="setStatus(req, 'COBRADO')" id="btn-confirm">👍</ion-button>
@@ -33,7 +36,7 @@
 
               <tbody>
                 <tr *ngFor="let product of req.producto_id">
-                  <td> 👁‍🗨 </td> <!-- (click)="clickDetails(product)" -->
+                  <td (click)="clickDetails(product)"> 👁‍🗨 </td> 
                   <td>
                     <p>{{ product.name }}</p>
                   </td>
@@ -41,7 +44,7 @@
                     <p>{{product.price | currency }}</p>
                   </td>
                   <td>
-                    <p>{{product.quantity }} unidades</p>
+                    <p>{{product.quantity }} unidad</p>
                   </td>
                 </tr>
               </tbody>
