--- a/TP_Comanda/src/app/pages/pedido/list/list.page.scss
+++ b/TP_Comanda/src/app/pages/pedido/list/list.page.scss
@@ -15,30 +15,22 @@ ion-card {
   padding-left: 1%;
 }
 
-.container-table{
+.container-table {
   text-align: center;
-
+  width: 30rem;
 }
 
 p {
   margin-top: 2%;
 }
 
-table {
-  margin: 2%;
-  margin-top: 2%;
-  margin-bottom: 2%;
-}
-
-th {
-  padding: 1rem;
-}
-
 th,
 td {
-  border: 0rem solid transparent !important;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+  border: 5% solid transparent !important;
 }
 
-#btn-decline{
+#btn-decline {
   --background: red;
 }
