--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title size="small">Registrar Duenio o Supervisor</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
   <ion-fab  vertical="top" horizontal="end">
