tocando tiempo estimado de pedido

--- a/TP_Comanda/src/app/pages/producto/list/list.page.html
+++ b/TP_Comanda/src/app/pages/producto/list/list.page.html
@@ -36,6 +36,7 @@
   <div (click)="clickBeforeConfirm()" *ngIf="this.getAcum() > 0" class="container-cards container-resume">
     <ion-card>
       <p>VER PEDIDO ({{ this.getAcum() | currency }} )</p>
+      <p>TIEMPO ESTIMADO: {{ this.getAproxFinish() }} minutos</p>
     </ion-card>
   </div>
 
