--- a/TP_Comanda/src/app/pages/user/login/login.page.html
+++ b/TP_Comanda/src/app/pages/user/login/login.page.html
@@ -50,9 +50,16 @@
         </ion-item>
 
       </form>
+
     </ion-card-content>
+
+    
   </ion-card>
+  <ion-fab (click)="onAnonymous()" vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button id="anonymus"> ❓ </ion-fab-button>
+  </ion-fab>
 </ion-content>
+
 
 <ion-footer>
   <p>¿No tienes una cuenta?</p>
