--- a/TP_Comanda/src/app/pages/user/register/anonimo/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/anonimo/register.page.html
@@ -42,7 +42,7 @@
         </ng-container>        
 
         <ion-button shape="round" type="submit" fill="solid" class="sign-btn" [disabled]="!form.valid">
-          Registrar
+          Ingresar
         </ion-button>
 
       </form>    
