--- a/TP_Comanda/src/global.scss
+++ b/TP_Comanda/src/global.scss
@@ -51,6 +51,7 @@ ion-item,
 ion-toolbar,
 ion-input,
 ion-icon,
+
 ion-select,
 ion-card-subtitle,
 ion-card-title,
@@ -58,6 +59,12 @@ ion-card-title,
 .alert-radio-label {
   font-family: "Righteous-Regular" !important;
   color: #251e93 !important;
+}
+
+.error_message {
+  font-family: "Righteous-Regular";
+  font-size: 100%;
+  color: red;
 }
 
 .alert-button-inner {
