probando codigos qr

--- a/TP_Comanda/src/app/pages/encuesta/cliente/cliente.page.html
+++ b/TP_Comanda/src/app/pages/encuesta/cliente/cliente.page.html
@@ -11,7 +11,7 @@
     </i>
   </p>
 
-  <div class="formulario">
+  <div class="formulario" *ngIf="this.request$ | async as request">
     <ion-grid>
       <ion-row>
         <ion-col col-12>
@@ -129,7 +129,7 @@
       </ion-row>
       <ion-row>
         <ion-col col-12>
-          <ion-button (click)="enviarEncuesta()" color="dark" expand="block">Enviar</ion-button>
+          <ion-button (click)="enviarEncuesta(request)" color="dark" expand="block">Enviar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
