--- a/TP_Comanda/src/app/pages/encuesta/cliente/cliente.page.html
+++ b/TP_Comanda/src/app/pages/encuesta/cliente/cliente.page.html
@@ -119,7 +119,7 @@
         <ion-col col-12>
           <hr />  
           <!-- <ion-button  color="dark" expand="block" [hidden]="yaSubioTodasLasFotos">Escanear Qr</ion-button> -->
-          <ion-button  color="dark" expand="block">Escanear Qr</ion-button>
+          <!-- <ion-button  color="dark" expand="block">Escanear Qr</ion-button> -->
         </ion-col>
       </ion-row>
       <ion-row>
