estilos en home

--- a/TP_Comanda/src/app/components/scanner/scanner.component.html
+++ b/TP_Comanda/src/app/components/scanner/scanner.component.html
@@ -1,5 +1,4 @@
-<ion-fab (click)="scannQR()" vertical="bottom" horizontal="center" slot="fixed">
-  <ion-fab-button>
-    <ion-icon name="barcode"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
+<div >
+  <img (click)="scannQR()" src="https://raw.githubusercontent.com/agusb98/Ionic-Six-Apps/main/RecargaQR/src/assets/img/bardcode.gif" alt="">
+  <p>Escanéa tu código QR aquí</p>
+</div>
