--- a/TP_Comanda/src/app/pages/producto/id/id.page.html
+++ b/TP_Comanda/src/app/pages/producto/id/id.page.html
@@ -2,6 +2,7 @@
 
   <ion-header>
     <ion-toolbar>
+      <ion-back-button (click)="navigateBack()" slot="start"></ion-back-button>
       <ion-title size="small">{{ pro.nombreProducto }}</ion-title>
     </ion-toolbar>
   </ion-header>
