jueguito con descuento: finish

--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -14,13 +14,14 @@
   </ion-fab>
 
   <!--que solopuedan acceder el mozo o el usuario con mesa asignada-->
-  <ion-fab vertical="top" horizontal="start" slot="fixed" (click)="redirectTo('chat')">
+  <ion-fab *ngIf="this.user.perfil == 'CLIENTE' || this.user.perfil == 'ANONIMO' || this.user.perfil == 'MOZO'"
+    vertical="top" horizontal="start" slot="fixed" (click)="redirectTo('chat')">
     <ion-fab-button>
       <img src="./../../../assets/images/consulta.png" alt="">
     </ion-fab-button>
   </ion-fab>
 
- 
+
 
   <div class="container-cards">
     <div style="all:unset;" *ngFor="let link of this.links">
