--- a/TP_Comanda/src/app/pages/pedido/list/list.page.html
+++ b/TP_Comanda/src/app/pages/pedido/list/list.page.html
@@ -7,13 +7,15 @@
 <ion-content>
 
   <div class="container-cards">
-    <div style="all:unset;" *ngFor="let req of this.requests$ | async">
+    <div style="all:unset;" *ngFor="let req of this.requests$ | async as requests">
+
       <ion-card class="card-shadow">
 
         <div class="details">
           <p>Usuario: {{ req.correo }}</p>
           <p>Mesa: {{ req.mesa_numero }}</p>
           <p>Estado: {{ req.estado }}</p>
+          <p *ngIf="req.estado == 'COBRAR'">Total: {{ this.getTotal(req) | currency }}</p>
           <p>Fecha: {{ req.date_created | date:'short' }}</p>
 
           <div class="container-table">
@@ -21,9 +23,12 @@
               <thead>
                 <tr>
                   <th>
-                    <ion-button *ngIf="req.estado == 'PENDIENTE'" (click)="setStatus(req, 'CANCELADO')" id="btn-decline">👎</ion-button>
+                    <ion-button *ngIf="req.estado == 'PENDIENTE'" (click)="setStatus(req, 'CANCELADO')"
+                      id="btn-decline">👎</ion-button>
                   </th>
-                  <th><p>{{ this.getQuestion(req.estado) }}</p></th>
+                  <th>
+                    <p>{{ this.getQuestion(req.estado) }}</p>
+                  </th>
                   <th></th>
                   <th *ngIf="req.estado == 'PENDIENTE'">
                     <ion-button (click)="setStatus(req, 'ACEPTADO')" id="btn-confirm">👍</ion-button>
@@ -36,12 +41,12 @@
 
               <tbody>
                 <tr *ngFor="let product of req.producto_id">
-                  <td (click)="clickDetails(product)"> 👁️ </td> 
+                  <td (click)="clickDetails(product)"> 👁️ </td>
                   <td>
-                    <p>{{ product.name }}</p>
+                    <p>{{ product.nombreProducto }}</p>
                   </td>
                   <td>
-                    <p>{{product.price | currency }}</p>
+                    <p>{{product.precio | currency }}</p>
                   </td>
                   <td>
                     <p>{{product.quantity }} unidad</p>
@@ -53,6 +58,7 @@
 
         </div>
       </ion-card>
+
     </div>
   </div>
 
