--- a/TP_Comanda/src/app/pages/chat/chat.page.html
+++ b/TP_Comanda/src/app/pages/chat/chat.page.html
@@ -6,46 +6,42 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen>
-<div *ngIf="currentMesaCliente">
-    <app-sala-chat [user]="currentUser" [uid]="currentUid" [mesaNumber]="mesasCliente.nro_mesa" [idMesaCliente]="mesasCliente.doc_id"></app-sala-chat>
+<ion-content fullscreen> 
+  <div [class]="bgSala">
+    <div class="row" style="max-height: 65vh; overflow-y: auto;">
+      <div class="col">
+        <div class="mensajes" *ngFor="let mje of mensajes">
+           
+          <div class="row m-1" >
+            <div class="col">
+              <div class="alert alert-success p-1 text-end" *ngIf="mje.uid == uid">
+                <p class="mb-0"><small>{{mje.fecha | date:'short'  }}</small></p>
+                <p class="mb-0"> {{mje.message}}</p> 
+              </div>
+    
+              <div class="alert alert-secondary p-1" *ngIf="mje.uid != uid">
+                <p class="mb-0"><strong>{{mje.userName}}({{mje.rol}}): </strong><small>{{mje.fecha | date:'short'}}</small></p>
+                <p class="mb-0"> {{mje.message}}</p>
+              </div>
+            </div>        
+          </div>   
 
-
-    <!--VER MENSAJES-->
-    <div [class]="bgSala">
-      <div class="row" style="max-height: 65vh; overflow-y: auto;">
-        <div class="col">
-          <div class="mensajes"  >
-        
-            <div class="row m-1" >
-              <div class="col">  
-                <div class="alert alert-secondary p-1"  >         
-                  <p class="mb-0"><strong>Rocio (cliente):</strong>Se puede pagar con mercado pago? <br><small> 2021-11-25 | 18:55</small></p> 
-                </div>
-
-                <div class="alert alert-secondary p-1"  >         
-                  <p class="mb-0"><strong>Pepe (mozo):</strong>Si <br><small> 2021-11-25 | 18:56</small></p> 
-                </div>
-              </div>        
-            </div>   
-  
-          </div> 
-        </div>
+        </div> 
       </div>
+    </div>
 
 
     <!--ESCRIBIR Y ENVIAR MENSAJE-->
-    <div class="row input-row">
+      <div class="row input-row">
       <div class="col">
-        <form  >
-          <input type="text" class="form-control mje-ctrl" placeholder="Escriba aquí su mensaje" >      
-          <button type="button" class="w-100 btn btn-lg btn-success"  >Enviar</button>
+        <form [formGroup]="chatForm">
+          <input type="text" class="form-control mje-ctrl" placeholder="Escriba aquí su mensaje" [(ngModel)]="mensaje" formControlName="messageCtrl">      
+          <button type="button" class="w-100 btn btn-lg btn-success" (click)="enviarMje()" [disabled]="chatForm.invalid">Enviar</button>
         </form>
       </div>
     </div>
 
 
 
-  </div>
-</div>
+  </div> 
 </ion-content> 
