--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -13,13 +13,21 @@
     </ion-fab-button>
   </ion-fab>
 
-  <!--que solopuedan acceder el mozo o el usuario con mesa asignada-->
-  <ion-fab vertical="top" horizontal="start" slot="fixed" (click)="redirectTo('chat')">
+  <!-- el usuario con mesa asignada-->
+  <ion-fab  *ngIf="this.user.perfil == 'CLIENTE' || this.user.perfil == 'ANONIMO'"
+   vertical="top" horizontal="start" slot="fixed" (click)="redirectTo('chat')">
     <ion-fab-button>
       <img src="./../../../assets/images/consulta.png" alt="">
     </ion-fab-button>
   </ion-fab>
 
+  <!--que solopuedan acceder el mozo  -->
+  <ion-fab *ngIf="this.user.perfil == 'MOZO'" 
+  vertical="top" horizontal="start" slot="fixed" (click)="redirectTo('chat-mozo')">
+    <ion-fab-button>
+      <img src="./../../../assets/images/consulta.png" alt="">
+    </ion-fab-button>
+  </ion-fab>
  
 
   <div class="container-cards">
